--- a/SampleApplication/SampleApplication/SampleApplication-Info.plist
+++ b/SampleApplication/SampleApplication/SampleApplication-Info.plist
@@ -22,6 +22,10 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>IndependentReserveAPIKey</key>
+	<string>60109b31-9bcb-4a4b-a5ed-a8002d3097db</string>
+	<key>IndependentReserveAPISecret</key>
+	<string>06e2e9606ea348dd9e635cb273868280</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
@@ -35,8 +39,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
