Project structure changed.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 .idea
 iOSApiClient.xcworkspace/xcuserdata
 SampleApplication/SampleApplication.xcodeproj/xcuserdata
+ApiClient.xcworkspace/xcuserdata
+SampleApplication/SampleApplication.xcodeproj/project.xcworkspace/xcuserdata
