Added empty keys for API key and secret.

--- a/SampleApplication/SampleApplication/Supporting Files/SampleApplication-Info.plist
+++ b/SampleApplication/SampleApplication/Supporting Files/SampleApplication-Info.plist
@@ -40,5 +40,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>IndependentReserveAPIKey</key>
+	<string></string>
+	<key>IndependentReserveAPISecret</key>
+	<string></string>
 </dict>
 </plist>
